Fix message alignment

--- a/front/scss/_form.scss
+++ b/front/scss/_form.scss
@@ -28,6 +28,7 @@
 
     .g-message-text {
         max-width: 480px;
+        text-align: left;
     }
 }
 
